<resources>
    <string name="app_name">InventarioQR</string>

    <string name="mensaje_ini">"WORLDWIDE REACH.\nHUMAN TOUCH."</string>
    <string name="imagen">International SOS</string>
    <string name="cerrar">Cerrar</string>
    <string name="siguiente">Sguiente</string>
    <string name="nombre">Nombre</string>
    <string name="estado">Estado</string>
    <string name="correo">CORREO</string>
    <string name="scan">Scan QR</string>
    <string name="registro">Registrar</string>
    <string name="qr"><a href="https://www.flaticon.es/iconos-gratis/escanear" title="escanear iconos">Escanear iconos creados por Freepik - Flaticon</a></string>
    <string name="registrar"><a href="https://www.flaticon.es/iconos-gratis/lista-de-verificacion" title="lista de verificación iconos">Lista de verificación iconos creados por Freepik - Flaticon</a></string>
    <string name="id">ID</string>
    <string name="equipo">Equipo / Tipo</string>
    <string name="serie">Serie</string>
    <string name="descricion">Descripción</string>
    <string name="save">Guardar</string>
    <string name="habilitar">Habilitar</string>
    <string name="share">Compartir</string>
    <string name="update">Actualizar</string>
    <string name="user">Usuario</string>
    <string name="location">Sede</string>
    <string name="model">Modelo</string>
    <string name="marca">Marca</string>
    <string name="nuevo">Nuevo</string>
</resources>